# AEGIS-BROWSER-2025

common/: Cargo.toml
common/src/: crypto.rs
desktop/src-tauri/: Cargo.toml
desktop/src-tauri/src/: cookies.rs  crypto.rs  firewall_proxy.rs  history.rs  main.rs  net_intercept.rs  prefs.rs
desktop/ui/: index.html  package.json
desktop/ui/src/: App.tsx  styles.css
desktop/ui/src/components/: SearchBars.tsx
docker/: opensearch-compose.yml
docs/: BUILD.md  PRIVACY.md  ROADMAP.md  SECURITY.md
firewall/: Cargo.toml
firewall/src/: main.rs
indexer/: Cargo.toml
indexer/src/: main.rs
mobile/: pubspec.yaml
mobile/lib/: main.dart  search_bars.dart
search-api/: Cargo.toml
search-api/src/: main.rs
