[package]
name = "aegis-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["brotli", "gzip", "rustls-tls"] }
scraper = "0.19"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opensearch = "2"
robots_txt = "0.8"
