[package]
name = "aegis-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "rustls-tls"] }
cookie_store = "0.21"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
sha2 = "0.10"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
http = "1.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
